--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "bson": "^6.5.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
@@ -26,8 +27,9 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
+    "mongodb": "^5.9.1",
     "mongoose": "^8.12.1",
-    "multer": "^1.4.4",
+    "multer": "^1.3.0",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.9"
   }
