--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^5.9.1",
     "mongoose": "^8.12.1",
+    "mongoose-gridfs": "^1.3.0",
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.9"
