--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-MONGO_URI=mongodb://mongo:ADJOMqiZfjPmXUrTnSQyYGiYYldyWYbN@switchback.proxy.rlwy.net:31155
+MONGO_URI=mongodb+srv://budiokselalubahagia:030107215Bud!@cluster0.qiozp.mongodb.net/blogBnB
 # mongodb://127.0.0.1:27017/blogBnB
 # MONGO_URI=mongodb://127.0.0.1:27017/blogBnB
 JWT_SECRET=MySecretBlog
-
 
