--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://budiokselalubahagia:030107215Bud!@cluster0.qiozp.mongodb.net/blogBnB
+MONGO_URI=mongodb://mongo:NpvFAKOnmZCXgcDSHqsOfjcwJOBVqAIV@shuttle.proxy.rlwy.net:18188
 # mongodb://127.0.0.1:27017/blogBnB
 # MONGO_URI=mongodb://127.0.0.1:27017/blogBnB
 JWT_SECRET=MySecretBlog
