--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://mongo:bqbaKYGnTGilldILbsSnGtKItJWxqyED@centerbeam.proxy.rlwy.net:55688
+MONGODB_URI=mongodb://mongo:bqbaKYGnTGilldILbsSnGtKItJWxqyED@centerbeam.proxy.rlwy.net:55688
 # mongodb://127.0.0.1:27017/blogBnB
 # MONGO_URI=mongodb://127.0.0.1:27017/blogBnB
 JWT_SECRET=MySecretBlog
