--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ MONGODB_URI=mongodb://mongo:bqbaKYGnTGilldILbsSnGtKItJWxqyED@centerbeam.proxy.rl
 # mongodb://127.0.0.1:27017/blogBnB
 # MONGO_URI=mongodb://127.0.0.1:27017/blogBnB
 JWT_SECRET=MySecretBlog
+SESSION_SECRET=jK59baL7epDCiHanxln0MsiAsLbtOOMlSHIirV1vnwE=
+
 
