--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb://mongo:bqbaKYGnTGilldILbsSnGtKItJWxqyED@centerbeam.proxy.rlwy.net:55688
-# MONGODB_URI=mongodb://127.0.0.1:27017/blogBnB
+# MONGODB_URI=mongodb://mongo:bqbaKYGnTGilldILbsSnGtKItJWxqyED@centerbeam.proxy.rlwy.net:55688
+MONGODB_URI=mongodb://127.0.0.1:27017/blogBnB
 # MONGO_URI=mongodb://127.0.0.1:27017/blogBnB
 JWT_SECRET=MySecretBlog
 SESSION_SECRET=jK59baL7epDCiHanxln0MsiAsLbtOOMlSHIirV1vnwE=
