--- a/.env
+++ b/.env
@@ -3,5 +3,4 @@ MONGODB_URI=mongodb://127.0.0.1:27017/blogBnB
 # MONGO_URI=mongodb://127.0.0.1:27017/blogBnB
 JWT_SECRET=MySecretBlog
 SESSION_SECRET=jK59baL7epDCiHanxln0MsiAsLbtOOMlSHIirV1vnwE=
-
-
+# MONGODB_URI=mongodb+srv://englishbybudi:<db_password>@cluster0.7net9.mongodb.net/Metan.jualanMetan
